--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size0
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.23276, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.23276, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.23276, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.23276, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = ionPropulsion
 	entryCost = 16800
@@ -194,4 +195,17 @@ PART
 		}
 	}
 
+	// Dimensions: x: 0.63, y: 0.46, z: 0.63
+	// Bounding Box Size: 179.8518 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 180
+		stackableQuantity = 3
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.2778,0.7799,0.4109, 0.2778,0.7799,0.4109, 0.3033,1,0.101, 0.3033,0.7081,0.2409, 0.2778,0.7798,0.4109, 0.2778,0.78,0.4109, 0,0.002548,-3.037E-10, 0.625,0.4604,0.625
+	}
 }
