--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 0.7315, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -1.1243, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.7315, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -1.1243, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = nuclearPropulsion
 	entryCost = 45000
@@ -175,4 +176,17 @@ PART
 		useEvent = True
 	}
 
+	// Dimensions: x: 1.25, y: 1.91, z: 1.25
+	// Bounding Box Size: 2990.625 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2991
+	}
+
+	DRAG_CUBE
+	{
+		cube = Fairing, 2.377,0.7713,0.7222, 2.377,0.7699,0.7222, 1.213,0.5335,0.3233, 1.213,0.397,0.6798, 2.377,0.768,0.7222, 2.377,0.7693,0.7222, 0,-0.1805,5.96E-08, 1.25,1.914,1.25
+		cube = Clean, 2.114,0.7677,0.7222, 2.114,0.7663,0.7222, 1.213,0.5335,0.3226, 1.213,0.397,0.6784, 2.114,0.763,0.7222, 2.114,0.7644,0.7222, 0,-0.1783,6.378E-08, 1.25,1.91,1.25
+	}
 }
