--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
@@ -12,14 +12,15 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = a2.mu
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/RSR_atom2/atomicant-250 }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/atom2/atomicant-250 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 1.07223, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -2.16974, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 1.07223, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -2.16974, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = veryHeavyRocketry
 	entryCost = 45000
@@ -186,4 +187,16 @@ PART
 		useEvent = True
 	}
 
+	// Dimensions: x: 2.57, y: 3.24, z: 2.57
+	// Bounding Box Size: 21455.14 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 21455
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 7.914,0.7462,1.381, 7.914,0.7464,1.381, 5.142,0.949,2.97, 5.142,0.7335,1.269, 7.914,0.7363,1.381, 7.914,0.7364,1.381, 0,-0.5488,6.542E-08, 2.573,3.242,2.573
+	}
 }
