--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
@@ -11,7 +11,8 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	mesh = model.mu
+	
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/Leg/rsr-eng-nuc-leg-250 }
 	scale = 1.0
 	rescaleFactor = 0.7
 	bulkheadProfiles = srf
