--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
@@ -11,14 +11,15 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/Longsword/rsr-eng-250-longsword }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/longsword/rsr-eng-250-longsword }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -0.2048244, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -0.20482, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = aerospaceTech
 	entryCost = 150000
@@ -29,6 +30,7 @@ PART
 	title = RSR Longsword Engine
 	manufacturer = #RSS-Agency-titl
 	description = Multimode: Air Breathing and Closed Cycle. Ex deserunt consequat cupidatat dolore deserunt dolore esse labore ad adipisicing Lorem sint elit ut mollit. 
+	tags = #RSS-eng-tags
 
 	mass = 7.5
 
@@ -336,4 +338,16 @@ PART
 		useEvent = True
 	}
 
+	// Dimensions: x: 2.56, y: 2.91, z: 2.56
+	// Bounding Box Size: 19157.84 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 19158
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 6.227,0.7725,1.376, 6.227,0.7724,1.376, 5.103,0.9654,0.2077, 5.103,0.3208,2.883, 6.227,0.7454,1.376, 6.227,0.7425,1.376, 0,-0.4574,1.192E-07, 2.564,2.915,2.564
+	}
 }
