--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyEngineFalchion/RustyEngineFalchion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyEngineFalchion/RustyEngineFalchion.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-250-falchion.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,35 +6,46 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-250-falchion
 	oldName = RustyEngineFalchion
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/falchion/rsr-eng-250-falchion }
 	scale = 1.0
-rescaleFactor = 0.625
+	rescaleFactor = 0.625
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0,1.0,0.0 , 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0,-1.0, 0.0, 0.0, -1.0, 0.0
-	CoMOffset = 0.0, 2.6, 0.0
-	mass = 2.0
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 20
-	maxTemp = 2000 // = 3600
+
 	TechRequired = aerospaceTech
 	entryCost = 35000
 	cost = 6000
 	category = Engine
 	subcategory = 0
+
 	title = RSR Falchion Engine
 	manufacturer = #RSS-Agency-titl
-	attachRules = 1,0,1,1,0
-	bulkheadProfiles = size1
+	tags = #RSS-eng-tags
+
+	mass = 2.0
+
+	CoMOffset = 0.0, 2.6, 0.0
+
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+
+	crashTolerance = 20
+
+	maxTemp = 2000 // = 3600
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	EFFECTS
 	{
 		running_closed
@@ -174,7 +185,7 @@ rescaleFactor = 0.625
 		useEngineResponseTime = True
 		engineAccelerationSpeed = 0.2
 		engineDecelerationSpeed = 0.35
-		useVelocityCurve = False		
+		useVelocityCurve = False
 		spoolEffectName = running_open
 		engineSpoolIdle = 0.05
 		engineSpoolTime = 2.0
@@ -259,8 +270,8 @@ rescaleFactor = 0.625
 	{
 		name = FXModuleAnimateThrottle
 		animationName = E_Animation
-                dependOnEngineState = True
-                responseSpeed = 0.01
+				dependOnEngineState = True
+				responseSpeed = 0.01
 	}
 	MODULE
 	{
