--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -25,6 +25,26 @@
 	}
 }
 
+@PART[rsr-eng-250-falchion]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+{
+	MODULE
+	{
+		name = GimbalTrim
+
+		gimbalTransformName = obj_gimbal 
+
+		trimRange = 30
+		trimRangeXP = 30
+		trimRangeYP = 30
+		trimRangeXN = 30
+		trimRangeYN = 30
+
+		useTrimResponseSpeed = True
+		trimResponseSpeed = 60
+		limitToGimbalRange = False
+	}
+}
+
 // \engineS3.cfg:
 // \rsr-eng-250-longsword.cfg:
 // \rsr-eng-ion-iguana.cfg:
