--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-falchion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-falchion.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-250-falchion.cfg v1.8.99.4
+// rsr-eng-125-falchion.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,12 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-250-falchion
+	name = rsr-eng-125-falchion
 	oldName = RustyEngineFalchion
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/falchion/rsr-eng-250-falchion }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/falchion/rsr-eng-125-falchion }
 	scale = 1.0
 	rescaleFactor = 0.625
 	bulkheadProfiles = size1
@@ -28,6 +28,7 @@ PART
 
 	title = RSR Falchion Engine
 	manufacturer = #RSS-Agency-titl
+	description = MultiModeEngine: AirBreathing and ClosedCycle. Occaecat Lorem culpa consectetur ex laborum incididunt est ad proident ut sunt occaecat.
 	tags = #RSS-eng-tags
 
 	mass = 2.0
@@ -41,7 +42,7 @@ PART
 
 	crashTolerance = 20
 
-	maxTemp = 2000 // = 3600
+	maxTemp = 2000
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -164,12 +165,14 @@ PART
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = MultiModeEngine
 		primaryEngineID = AirBreathing
 		secondaryEngineID = ClosedCycle
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -233,6 +236,7 @@ PART
 			key = 1 1 1.055097 0
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -266,6 +270,7 @@ PART
 			key = 9 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
@@ -273,19 +278,14 @@ PART
 				dependOnEngineState = True
 				responseSpeed = 0.01
 	}
+
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = obj_gimbal
 		gimbalRange = 3
 	}
-	MODULE
-	{
-		name = ModuleTestSubject
-		environments = 15
-		useStaging = True
-		useEvent = True
-	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -295,6 +295,7 @@ PART
 		falloff = 2
 		thrustTransformName = thrustTransform
 	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -304,4 +305,14 @@ PART
 		falloff = 1.6
 		thrustTransformName = thrustTransform
 	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 15
+		useStaging = True
+		useEvent = True
+	}
+
+
 }
