--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRBasicJet.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRBasicJet.cfg
@@ -10,139 +10,43 @@ PART
 	oldName = RSRBasicJet
 	module = Part
 	author = GagaX and zer0Kerbal
-scale = 1.0
-rescaleFactor = 1.0
-	mesh = model.mu
+
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/jetbasic/rsr-eng-jet-125-basic }
+	scale = 1.0
+	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,0,0
 	node_stack_top = 0.0, 0.137, 0.0, 0.0, 1.0, 0.0
-	CoMOffset = 0.0, 2.3, 0.0
+
 	TechRequired = aviation
 	entryCost = 4000
 	cost = 950
 	category = Engine
 	subcategory = 0
+
 	title = RSR-33 "Maestral" Basic Jet Engine
 	manufacturer = #RSS-Agency-titl
 	description = A standard air breathing engine.
 	tags = new // #RSS-jet-tags
-	attachRules = 1,0,1,0,0
+
 	mass = 1.5
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
+	CoMOffset = 0.0, 2.3, 0.0
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
-	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size1
-	MODULE
-	{
-		name = ModuleEnginesFX
-		engineID = Cruise
-		thrustVectorTransformName = thrustTransform
-		exhaustDamage = True
-		ignitionThreshold = 0.1
-		minThrust = 0
-		maxThrust = 80
-		heatProduction = 40
-		useEngineResponseTime = True
-		engineAccelerationSpeed = 0.12
-		engineDecelerationSpeed = 0.5
-		fxOffset = 0, 0, 0.74
-		flameoutEffectName = flameout
-		powerEffectName = running_thrust
-		engageEffectName = engage
-		disengageEffectName = disengage
-		spoolEffectName = running_turbine
-		engineSpoolIdle = 0.05
-		engineSpoolTime = 2.0
-		EngineType = Turbine
-		PROPELLANT
-		{
-			name = LiquidFuel
-			resourceFlowMode = STAGE_PRIORITY_FLOW
-			ratio = 1
-			DrawGauge = True
-		}
-		PROPELLANT
-		{
-			name = IntakeAir
-			ignoreForIsp = True
-			ratio = 11
-		}
-		atmosphereCurve
-		{
-			key = 0 9600 0 0
-		}
-		// Jet params
-		atmChangeFlow = True
-		useVelCurve = True
-		useAtmCurve = True
-		flameoutBar = 0.02
-		machLimit = 0.75
-		machHeatMult = 3.5
-		velCurve
-		{
-			key = 0 1 0 -0.125804
-			key = 0.35 0.96 0 0
-			key = 1.05 1.2 0.5409369 0.5409369
-			key = 1.67 1.7 0 0
-			key = 2.15 1.1 -3.49991 -3.49991
-			key = 2.3 0.5 -3.164169 -3.164169
-			key = 2.5 0 0.004306508 0
-		}
-		atmCurve
-		{
-			key = 0 0 0 0
-			key = 0.1 0.1 1.276916 1.276916
-			key = 0.297 0.35 1.304143 1.304143
-			key = 0.538 0.59 0.8485174 0.8485174
-			key = 1 1 0.8554117 0
-		}
-	}
 
-MODULE
-{
-name = FXModuleAnimateThrottle
-animationName = jet
-dependOnEngineState = True
-responseSpeed = 0.1
-}
+	maxTemp = 2000
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 
-	MODULE
-	{
-		name = ModuleGimbal
-		gimbalTransformName = thrustTransform
-		gimbalRange = 1
-	}
-	MODULE
-	{
-		name = ModuleAlternator
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 4
-		}
-	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
-	}
-	
-	MODULE
-	{
-		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
-		fxMax = 0.5
-		maxDistance = 20
-		falloff = 2
-		thrustTransformName = thrustTransform
-	}
 	EFFECTS
 	{		
 		running_thrust
@@ -227,7 +131,128 @@ responseSpeed = 0.1
 			}
 		}
 	}
-MODULE
+
+	MODULE
+	{
+		name = ModuleEnginesFX
+		engineID = Cruise
+		thrustVectorTransformName = thrustTransform
+		exhaustDamage = True
+		ignitionThreshold = 0.1
+		minThrust = 0
+		maxThrust = 80
+		heatProduction = 40
+		useEngineResponseTime = True
+		engineAccelerationSpeed = 0.12
+		engineDecelerationSpeed = 0.5
+		fxOffset = 0, 0, 0.74
+		flameoutEffectName = flameout
+		powerEffectName = running_thrust
+		engageEffectName = engage
+		disengageEffectName = disengage
+		spoolEffectName = running_turbine
+		engineSpoolIdle = 0.05
+		engineSpoolTime = 2.0
+		EngineType = Turbine
+		PROPELLANT
+		{
+			name = LiquidFuel
+			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = IntakeAir
+			ignoreForIsp = True
+			ratio = 11
+		}
+		atmosphereCurve
+		{
+			key = 0 9600 0 0
+		}
+		// Jet params
+		atmChangeFlow = True
+		useVelCurve = True
+		useAtmCurve = True
+		flameoutBar = 0.02
+		machLimit = 0.75
+		machHeatMult = 3.5
+		velCurve
+		{
+			key = 0 1 0 -0.125804
+			key = 0.35 0.96 0 0
+			key = 1.05 1.2 0.5409369 0.5409369
+			key = 1.67 1.7 0 0
+			key = 2.15 1.1 -3.49991 -3.49991
+			key = 2.3 0.5 -3.164169 -3.164169
+			key = 2.5 0 0.004306508 0
+		}
+		atmCurve
+		{
+			key = 0 0 0 0
+			key = 0.1 0.1 1.276916 1.276916
+			key = 0.297 0.35 1.304143 1.304143
+			key = 0.538 0.59 0.8485174 0.8485174
+			key = 1 1 0.8554117 0
+		}
+	}
+
+	MODULE
+	{
+		name = FXModuleAnimateThrottle
+		animationName = jet
+		dependOnEngineState = True
+		responseSpeed = 0.1
+	}
+
+	MODULE
+	{
+		name = ModuleGimbal
+		gimbalTransformName = thrustTransform
+		gimbalRange = 1
+		gimbalResponseSpeed = 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
+	}
+
+	MODULE
+	{
+		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 4
+		}
+	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
+	
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.5
+		maxDistance = 20
+		falloff = 2
+		thrustTransformName = thrustTransform
+	}
+
+	MODULE
 	{
 		name = ModuleTestSubject
 		useStaging = True
@@ -379,4 +404,5 @@ MODULE
 			prestige = Exceptional
 		}
 	}
+
 }
