--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -26,7 +26,9 @@ Localization
 		#RSR-gecko = )gecko
 		#RSR-iguana = )iguana
 		#RSR-atomicant = )atomic )ant
-		#RSR- = )
+		#RSR-maestral = )maestral
+		#RSR-falchion = )falchion
+		#RSR-longsword = )longsword
 		#RSR- = )
 
 // 0.8.99.3
