--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -5,7 +5,7 @@
 
 // THIS FILE: CC BY-SA 4.0 by [zer0Kerbal][https://github.com/zer0Kerbal]
 
-@PART[rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+@PART[rsr-eng-jet-125-basic,rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
