--- a/GameData/RustyStar/RustyStarRockets/Compatibility/StackInlineLights.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/StackInlineLights.cfg
@@ -3,7 +3,7 @@
 // created: 05 Mar 2020
 // updated: 
 
-// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 
 @PART[rsr-klaw]:NEEDS[ASET/StackInlineLights]:FOR[StackInlineLights]
 {
