--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
@@ -7,7 +7,7 @@
 // created: 17 Aug 2017
 // updated: 09 Mar 2023
 
-// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 
 // creates duplicate part to prevent save game issues because of a part name change
 // +PART[rsr-*]:HAS[#oldName[*]]:NEEDS[Rusty Star Rockets]:LAST[Rusty Star Rockets]
