--- a/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
@@ -7,7 +7,7 @@
 // created: 04 Oct 2022
 // updated: 17 Feb 2023
 
-// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 
 // updates parts with MOD-NAME localization strings
 @PART[rsr-*]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
