--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
@@ -3,7 +3,7 @@
 // created: 03 Nov 2015
 // updated: 21 Aug 2022
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 
 PART
 {
