--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRturboJet.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRturboJet.cfg
@@ -3,10 +3,10 @@
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-jet-125-turbo
 	oldName = RSRturboJet
 	module = Part
 	author = GagaX and zer0Kerbal
