--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
@@ -3,7 +3,7 @@
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
 	name = rsr-heatshield-0625
