--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRturboJet.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSRturboJet.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-jet-125-turbo.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
