--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -44,6 +44,25 @@
 		limitToGimbalRange = False
 	}
 }
+@PART[rsr-eng-jet-125-turbo]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+{
+	MODULE
+	{
+		name = GimbalTrim
+
+		gimbalTransformName = Gimbal 
+
+		trimRange = 30
+		trimRangeXP = 30
+		trimRangeYP = 30
+		trimRangeXN = 30
+		trimRangeYN = 30
+
+		useTrimResponseSpeed = True
+		trimResponseSpeed = 60
+		limitToGimbalRange = False
+	}
+}
 
 // \engineS3.cfg:
 // \rsr-eng-250-longsword.cfg:
