--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -29,7 +29,7 @@ Localization
 		#RSR-maestral = )maestral
 		#RSR-falchion = )falchion
 		#RSR-longsword = )longsword
-		#RSR- = )
+		#RSR-bura = )bura
 
 // 0.8.99.3
 	// Parts\Aero
