--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
@@ -29,7 +29,7 @@ PART
 	title = RSR "Iguana" Radon Electric Propulsion System
 	manufacturer = #RSS-Agency-titl
 	description = Iguana Electric Propulsion. Velit non nulla est officia nostrud.
-	tags = #RSS-ion-tags
+	tags = new // #RSS-ion-tags
 
 	mass = 0.99
 
