--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
@@ -10,30 +10,156 @@ PART
 	oldName = RSRturboJet
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = NewModel.mu
-	
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/jetturbo/rsr-eng-jet-125-turbo }
+	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.80937, 0.0, 0.0, 1.0, 0.0
+
 	TechRequired = hypersonicFlight
 	entryCost = 17000
 	cost = 2050
 	category = Engine
 	subcategory = 0
+
 	title = RSR Turbo Ramjet Engine "Bura"
 	manufacturer = #RSS-Agency-titl
-	description = .
-	attachRules = 1,0,1,1,0
+	description = Aliquip Lorem esse pariatur.
+	tags = new // #RSS-jet-tags
+
 	mass = 1.75
-	heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
+
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size1
+	heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+	EFFECTS
+	{
+		running_thrust
+		{
+			AUDIO
+			{
+				channel = Ship
+			//	clip = sound_jet_deep
+				clip = sound_rocket_spurts
+				volume = 0.0 0.0
+				volume = 0.5 0.4
+				volume = 1.0 0.5
+				pitch = 0.0 0.8
+				pitch = 1.0 1.5
+				loop = true
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1
+				localRotation = 1, 0, 0, -90
+			}
+		}
+		shockDiamond
+		{
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/afterburner_shock
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.45 0.0
+				emission = 0.6 0.8
+				emission = 1 1.15
+				speed = 0.4 0.3
+				speed = 0.6 0.8
+				speed = 1.0 1.15
+			}
+		}
+		running_turbine
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_jet_low
+				volume = 0.0 0.0
+				volume = 0.02 0.0
+				volume = 0.1 0.8
+				volume = 0.2 1.0
+				volume = 0.5 1.0
+				pitch = 0.0 0.5
+				pitch = 0.2 1.0
+				pitch = 1.0 1.2
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/afterburner_flame
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.16 0.0
+				emission = 0.3 0.5
+				emission = 0.5 1.0
+				emission = 1.0 1.0
+				speed = 0.1 0.05
+				speed = 0.3 1.0
+				speed = 0.5 1.15
+				speed = 1.0 1.15
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -72,7 +198,7 @@ PART
 		}
 		atmosphereCurve
 		{
-			key = 0 4000 0 0 
+			key = 0 4000 0 0
 		}
 		// Jet params
 		atmChangeFlow = True
@@ -102,6 +228,7 @@ PART
 			key = 1 1 1.013946 0
 		}
 	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
@@ -109,32 +236,54 @@ PART
 		dependOnEngineState = True
 		dependOnThrottle = True
 		responseSpeed = 1
-		
 	}
-	
+
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = Gimbal
 		gimbalRange = 1
+		gimbalResponseSpeed = 50
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
 	}
+
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 5.0
 		}
 	}
-	RESOURCE
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
+
+	MODULE
 	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.6
+		maxDistance = 25
+		falloff = 2
+		thrustTransformName = thrustTransform
 	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -339,129 +488,5 @@ PART
 			prestige = Exceptional
 		}
 	}
-	MODULE
-	{
-		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
-		fxMax = 0.6
-		maxDistance = 25
-		falloff = 2
-		thrustTransformName = thrustTransform
-	}
-	EFFECTS
-	{		
-		running_thrust
-		{			
-			AUDIO
-			{
-				channel = Ship
-			//	clip = sound_jet_deep
-				clip = sound_rocket_spurts
-				volume = 0.0 0.0
-				volume = 0.5 0.4
-				volume = 1.0 0.5
-				pitch = 0.0 0.8
-				pitch = 1.0 1.5
-				loop = true
-			}
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_smokeTrail_light
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.25
-				speed = 1.0 1.0
-				localOffset = 0, 0, 1
-				localRotation = 1, 0, 0, -90
-			}					
-		}
-		shockDiamond
-		{
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/afterburner_shock
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.45 0.0
-				emission = 0.6 0.8
-				emission = 1 1.15
-				speed = 0.4 0.3
-				speed = 0.6 0.8
-				speed = 1.0 1.15
-			}
-		}
-		running_turbine
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_jet_low
-				volume = 0.0 0.0
-				volume = 0.02 0.0
-				volume = 0.1 0.8
-				volume = 0.2 1.0
-				volume = 0.5 1.0
-				pitch = 0.0 0.5
-				pitch = 0.2 1.0
-				pitch = 1.0 1.2
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/afterburner_flame
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.16 0.0
-				emission = 0.3 0.5
-				emission = 0.5 1.0
-				emission = 1.0 1.0
-				speed = 0.1 0.05
-				speed = 0.3 1.0
-				speed = 0.5 1.15
-				speed = 1.0 1.15
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_medium
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		disengage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = thrustTransform
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-	}
+
 }
