--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -44,7 +44,8 @@
 		limitToGimbalRange = False
 	}
 }
-@PART[rsr-eng-jet-125-turbo]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+
+@PART[rsr-eng-125-tutnplok,rsr-eng-jet-125-turbo]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
