--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -30,6 +30,7 @@ Localization
 		#RSR-falchion = )falchion
 		#RSR-longsword = )longsword
 		#RSR-bura = )bura
+		#RSR-tutnplok = )tutnplok
 
 // 0.8.99.3
 	// Parts\Aero
