--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyLiquidEngine/RustyLiquidEngine.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyLiquidEngine/RustyLiquidEngine.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-125-tutnplok.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,34 +6,45 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = RustyLiquidEngine
+	name = rsr-eng-125-tutnplok
+	oldName = RustyLiquidEngine
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
+
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/tutnplok/rsr-eng-125-tutnplok }	scale = 1.0
 	scale = 1.0
-        rescaleFactor = 1.0
+	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,0,0
 	node_stack_top = 0.0, 0.07, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -1.32, 0.0, 0.0, -1.0, 0.0
+
 	TechRequired = basicRocketry
 	entryCost = 3500
 	cost = 1200
 	category = Engine
 	subcategory = 0
+
 	title = RSR-1 Engine "Tutnplok"
 	manufacturer = #RSS-Agency-titl
-        description = Dreaming of spacetravel? Then the RSR-1 Engine is ideal product for You. Yes, 8/10 of our users says it works!
-	attachRules = 1,0,1,0,0
+	description = Dreaming of spacetravel? Then the RSR-1 Engine is ideal product for You. Yes, 8/10 of our users says it works!
+	tags = new // #RSS-eng-tags
+
 	mass = 1.5
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
+
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size1
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	EFFECTS
 	{
 		running_closed
@@ -81,17 +92,18 @@ PART
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
-runningEffectName = running_closed
+		runningEffectName = running_closed
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 210
 		heatProduction = 200
-fxOffset = 0, 0, -0.74
+		fxOffset = 0, 0, -0.74
 		EngineType = LiquidFuel
 		PROPELLANT
 		{
@@ -111,6 +123,7 @@ fxOffset = 0, 0, -0.74
 			key = 6 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleJettison
@@ -121,6 +134,7 @@ fxOffset = 0, 0, -0.74
 		jettisonForce = 5
 		jettisonDirection = 1 0 0
 	}
+
 	MODULE
 	{
 		name = ModuleJettison
@@ -131,22 +145,35 @@ fxOffset = 0, 0, -0.74
 		jettisonForce = 5
 		jettisonDirection = -1 0 0
 	}
+
 	MODULE
 	{
 		name = ModuleGimbal
-		gimbalTransformName = GIMBAL
+		gimbalTransformName = thrustTransform
 		gimbalRange = 3
-                               	}
+		gimbalResponseSpeed = 35
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
+	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = EngineHeat
-                dependOnEngineState = True
-                responseSpeed = 0.01
+		dependOnEngineState = True
+		responseSpeed = 0.01
 	}
+
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -162,14 +189,16 @@ fxOffset = 0, 0, -0.74
 		falloff = 1.7
 		thrustTransformName = thrustTransform
 	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
-	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -177,4 +206,5 @@ fxOffset = 0, 0, -0.74
 		useStaging = True
 		useEvent = False
 	}
+
 }
