--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -31,6 +31,7 @@ Localization
 		#RSR-longsword = )longsword
 		#RSR-bura = )bura
 		#RSR-tutnplok = )tutnplok
+		#RSR-mariveex = )mariveex
 
 // 0.8.99.3
 	// Parts\Aero
