--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyLiquidEngineLarge/RustyLiquidEngineLarge.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyLiquidEngineLarge/RustyLiquidEngineLarge.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-250-mariveex.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,27 +6,32 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = RustyLiquidEngineLarge
+	name = rsr-eng-250-mariveex
+	oldName = RustyLiquidEngineLarge
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/mariveex/rsr-eng-250-mariveex }	mesh = model.mu
 	scale = 1.0
-        rescaleFactor = 1.1
+	rescaleFactor = 1.1
+	bulkheadProfiles = size2
+
+	attachRules = 1,0,1,0,0
 	node_stack_top = 0.0, 1.20427, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -1.17511, 0.0, 0.0, -1.0, 0.0
+
 	TechRequired = heavierRocketry
 	entryCost = 38000
 	cost = 13000
 	category = Engine
 	subcategory = 0
+
 	title = RSR Engine "Mariveex"
 	manufacturer = #RSS-Agency-titl
 	description = Big rocket engine.
-	attachRules = 1,0,1,0,0
+	tags = new // #RSS-eng-tags
+
 	mass = 6
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -35,9 +40,11 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size2
-	
-EFFECTS
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
+	EFFECTS
 	{
 		running_closed
 		{
@@ -84,17 +91,18 @@ EFFECTS
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
-runningEffectName = running_closed
+		runningEffectName = running_closed
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 1600
 		heatProduction = 200
-fxOffset = 0, 0, 0.0
+		fxOffset = 0, 0, 0.0
 		EngineType = LiquidFuel
 		PROPELLANT
 		{
@@ -115,8 +123,7 @@ fxOffset = 0, 0, 0.0
 		}
 	}
 
-
-MODULE
+	MODULE
 	{
 		name = ModuleJettison
 		jettisonName = Fairing
@@ -126,40 +133,51 @@ MODULE
 		jettisonForce = 16
 		jettisonDirection = 0 0 1
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 5
-                useGimbalResponseSpeed = true
-		gimbalResponseSpeed = 5
-               	}
-	
-	
+		gimbalResponseSpeed = 5 // 33
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
+	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = engine_animation_X
-                dependOnEngineState = True
-                responseSpeed = 0.01
+		dependOnEngineState = True
+		responseSpeed = 0.01
 	}
+
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 12.0
 		}
 	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
-	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -169,7 +187,8 @@ MODULE
 		falloff = 1.8
 		thrustTransformName = thrustTransform
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleTestSubject
 		useStaging = True
@@ -348,5 +367,6 @@ MODULE
 			value = 20
 			prestige = Exceptional
 		}
-	}	
+	}
+
 }
