--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -32,6 +32,7 @@ Localization
 		#RSR-bura = )bura
 		#RSR-tutnplok = )tutnplok
 		#RSR-mariveex = )mariveex
+		#RSR-voozmee = )voozmee
 
 // 0.8.99.3
 	// Parts\Aero
