--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -33,6 +33,7 @@ Localization
 		#RSR-tutnplok = )tutnplok
 		#RSR-mariveex = )mariveex
 		#RSR-voozmee = )voozmee
+		#RSR-goodrax = )goodrax
 
 // 0.8.99.3
 	// Parts\Aero
