--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
@@ -37,21 +37,25 @@ PART
 
 	title = RSR Rusty Booster "Voozmee"
 	manufacturer = #RSS-Agency-titl
-	description = .
+	description = Eu deserunt ad sint ullamco duis et.
 	tags = new // #RSS-srb-tags
 	
 	mass = 1.5
+
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
+
 	maxTemp = 2200 // = 3900
 	// heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...
 
 	stagingIcon = SOLID_BOOSTER
+
 	MODULE
 	{
 		name = ModuleEngines
@@ -80,24 +84,13 @@ PART
 			key = 6 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateHeat
 		ThermalAnim = a
 	}
-	RESOURCE
-	{
-		name = SolidFuel
-		amount = 820
-		maxAmount = 820
-	}
-	MODULE
-	{
-		name = ModuleTestSubject
-		environments = 15
-		useStaging = True
-		useEvent = False
-	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -107,4 +100,20 @@ PART
 		falloff = 2
 		thrustTransformName = thrustTransform
 	}
+
+	RESOURCE
+	{
+		name = SolidFuel
+		amount = 820
+		maxAmount = 820
+	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 15
+		useStaging = True
+		useEvent = False
+	}
+
 }
