--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -5,7 +5,7 @@
 
 // THIS FILE: CC BY-SA 4.0 by [zer0Kerbal][https://github.com/zer0Kerbal]
 
-@PART[rsr-eng-250-mariveex,rsr-eng-jet-125-basic,rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+@PART[rsr-eng-250-ogard,rsr-eng-250-mariveex,rsr-eng-jet-125-basic,rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
@@ -65,6 +65,26 @@
 	}
 }
 
+@PART[rsr-eng-125-goodrax]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+{
+	MODULE
+	{
+		name = GimbalTrim
+
+		gimbalTransformName = GIMBAL 
+
+		trimRange = 30
+		trimRangeXP = 30
+		trimRangeYP = 30
+		trimRangeXN = 30
+		trimRangeYN = 30
+
+		useTrimResponseSpeed = True
+		trimResponseSpeed = 60
+		limitToGimbalRange = False
+	}
+}
+
 // \engineS3.cfg:
 // \rsr-eng-250-longsword.cfg:
 // \rsr-eng-ion-iguana.cfg:
@@ -75,17 +95,9 @@
 
 // \RSR_VTOL_EnginesB\VTOL2L.cfg:
 // \RSR_VTOL_EnginesB\VTOL2R.cfg:
-// \RSRBasicJet\RSRBasicJet.cfg:
-// \RSRturboJet\RSRturboJet.cfg:
-//   118  		gimbalTransformName = Gimbal
-
-// \RustyEngineFalchion.cfg:
-//   268  		gimbalTransformName = obj_gimbal
 
 // \RustyLiquidEngine.cfg:
 //   137  		gimbalTransformName = GIMBAL
 
 // \RustyLiquidEngineLarge.cfg:
 // \RSR_S2_V.cfg:
-// \RustyLiquidEngineVacuum.cfg:
-//   130  		gimbalTransformName = GIMBAL
