--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -34,6 +34,7 @@ Localization
 		#RSR-mariveex = )mariveex
 		#RSR-voozmee = )voozmee
 		#RSR-goodrax = )goodrax
+		#RSR-ogard = )ogard
 
 // 0.8.99.3
 	// Parts\Aero
