--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-125-goodrax.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,36 +6,45 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-125-goodrax
 	oldName = RustyLiquidEngineVacuum
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/goodrax/rsr-eng-125-goodrax }
 	scale = 1.0
-        rescaleFactor = 1.0
+	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,0,0
 	node_stack_top = 0.0, 0.07, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -0.9636, 0.0, 0.0, -1.0, 0.0
+
 	TechRequired = advRocketry
 	entryCost = 1500
 	cost = 400
 	category = Engine
 	subcategory = 0
+
 	title = RSR-2 Engine "Goodrax"
 	manufacturer = #RSS-Agency-titl
-        description = You have reached orbit and don't know what to do next? Our RSR-2 Engine can take You to the Mun or and Eeloo!
+	description = You have reached orbit and don't know what to do next? Our RSR-2 Engine can take You to the Mun or and Eeloo!
+	tags = new // #RSS-vac-tags
 
-	attachRules = 1,0,1,0,0
 	mass = 0.5
-	// heatConductivity = 0.06
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
-	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size1
+
+	maxTemp = 2000
+	// heatConductivity = 0.06
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8
+
 	EFFECTS
 	{
 		running_closed
@@ -83,17 +92,18 @@ PART
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
-runningEffectName = running_closed
+		runningEffectName = running_closed
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 70
 		heatProduction = 120
-fxOffset = 0, 0, -0.74
+		fxOffset = 0, 0, -0.74
 		EngineType = LiquidFuel
 		PROPELLANT
 		{
@@ -113,6 +123,7 @@ fxOffset = 0, 0, -0.74
 			key = 3 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleJettison
@@ -123,31 +134,42 @@ fxOffset = 0, 0, -0.74
 		jettisonForce = 5
 		jettisonDirection = -1 0 0
 	}
-	
+
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = GIMBAL
 		gimbalRange = 3
-                useGimbalResponseSpeed = true
-		gimbalResponseSpeed = 7
-               	}
+		gimbalResponseSpeed = 7 // 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
+	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = EngineHeat
-                dependOnEngineState = True
-                responseSpeed = 0.01
+		dependOnEngineState = True
+		responseSpeed = 0.01
 	}
+
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 6.0
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -157,14 +179,16 @@ fxOffset = 0, 0, -0.74
 		falloff = 1.7
 		thrustTransformName = thrustTransform
 	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
-	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -172,4 +196,5 @@ fxOffset = 0, 0, -0.74
 		useStaging = True
 		useEvent = False
 	}
+
 }
