--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -35,6 +35,7 @@ Localization
 		#RSR-voozmee = )voozmee
 		#RSR-goodrax = )goodrax
 		#RSR-ogard = )ogard
+		#RSR-bubu = )bubu
 
 // 0.8.99.3
 	// Parts\Aero
