--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyBoosterMini/RustyBoosterMini.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RustyBoosterMini/RustyBoosterMini.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-srb-125-bubu.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,15 +6,20 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-srb-125-bubu
 	oldName = RustyBoosterMini
 	module = Part
 	author = GagaX and zer0Kerbal
+
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/bubu/rsr-srb-125-bubu }
 	rescaleFactor = 1.0
 	scale = 1.0
-	mesh = NewModel
-	node_stack_bottom = 0.0, -0.87734, 0.0, 0.0, -1.0, 0.0, 1
+	bulkheadProfiles = size1, srf
+
+	attachRules = 1,1,1,1,0
 	node_stack_top = 0.0, 0.61214, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.87734, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, -0.625, 0.0, 0.0, 1.0, 1
 
 	fx_exhaustFlame_yellow = 0.0, -6.756, 0.0, 0.0, 1.0, 0.0, running
@@ -24,27 +29,33 @@ PART
 	sound_rocket_hard = running
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
+
 	TechRequired = start
 	entryCost = 0
 	cost = 99
 	category = Engine
 	subcategory = 0
-manufacturer = #RSS-Agency-titl
+
 	title = RSR Small RSB "Bubu"
+	manufacturer = #RSS-Agency-titl
 	description = This is basically a very big firecracker.
-	attachRules = 1,1,1,1,0
+	tags = new // #RSS-srb-tags
+
 	mass = 0.55
-	heatConductivity = 0.06 // 1/2 default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...
+
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
-	maxTemp = 2000 // = 3600
+
+	maxTemp = 2000
+	heatConductivity = 0.06 // 1/2 default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...
+
 	stagingIcon = SOLID_BOOSTER
-	bulkheadProfiles = size1, srf
 
 	MODULE
 	{
