--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -36,6 +36,7 @@ Localization
 		#RSR-goodrax = )goodrax
 		#RSR-ogard = )ogard
 		#RSR-bubu = )bubu
+		#RSR-shejoz = )shejoz
 
 // 0.8.99.3
 	// Parts\Aero
