--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
@@ -42,7 +42,7 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 
-	maxTemp = 2000 // = 3600
+	maxTemp = 2000
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
