--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
@@ -39,7 +39,7 @@ PART
 
 	crashTolerance = 7
 
-	maxTemp = 2000 // = 3600
+	maxTemp = 2000
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
