--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-rad-shejoz.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-rad-shejoz.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-rad-shejoz.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,42 +6,53 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-rad-shejoz
 	oldName = liquidEngineRadial
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
-scale = 1.0
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/shejoz/ }
+	scale = 1.0
 	rescaleFactor = 0.7
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,1,0
 	node_attach = 0.0, 0.3423436, -0.0, 0.0, 0.0, 1.0
+
 	fx_exhaustFlame_blue_small = 0.0, -0.5337813, 0.1355984, 0.0, 1.0, 0.0, running
 	fx_exhaustLight_blue = 0.0, -0.5337813, 0.1355984, 0.0, 0.0, 1.0, running
 	sound_vent_medium = engage
 	sound_rocket_hard = running
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
+
 	TechRequired = advRocketry
 	entryCost = 3500
 	cost = 820
 	category = Engine
 	subcategory = 0
+
 	title = RSR Radial Liquid Fuel Engine "Shejoz"
 	manufacturer = #RSS-Agency-titl
 	description = Radial engine.
-	attachRules = 0,1,0,1,0
+	tags = new // #RSS-eng-tags
+
 	mass = 0.9
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2000 // = 3600
-	bulkheadProfiles = srf
+
+	maxTemp = 2000
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	MODULE
 	{
 		name = ModuleEngines
@@ -71,26 +82,31 @@ scale = 1.0
 			key = 9 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleGimbal
-		gimbalTransformName = obj_gimbal
+		gimbalTransformName = thrustTransform
 		gimbalRange = 5
+		gimbalResponseSpeed = 35
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
 	}
+
 	MODULE
-	{
-		name = ModuleTestSubject
-		environments = 15
-		useStaging = True
-		useEvent = True
-	}
-MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = 111
-                dependOnEngineState = True
-                responseSpeed = 0.01
+		dependOnEngineState = True
+		responseSpeed = 0.01
 	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -100,4 +116,13 @@ MODULE
 		falloff = 1.7
 		thrustTransformName = thrustTransform
 	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 15
+		useStaging = True
+		useEvent = True
+	}
+
 }
