--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/VTOL2R.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/VTOL2R.cfg
@@ -22,10 +22,11 @@ PART
 	cost = 7099
 	category = Propulsion
 	subcategory = 0
+
 	title = RSR VTOL 2-R
 	manufacturer = #RSS-Agency-titl
-
-	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm)
+	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm) MultiModeEngine: Air Breathing and Closed Cycle>
+	tags = new // #RSS-vtol-tags
 
 	attachRules = 0,1,0,0,1
 
@@ -37,8 +38,7 @@ PART
 	crashTolerance = 19
 	maxTemp = 3900
 
-
-EFFECTS
+	EFFECTS
 	{
 		running_closed
 		{
@@ -156,12 +156,14 @@ EFFECTS
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = MultiModeEngine
 		primaryEngineID = AirBreathing
 		secondaryEngineID = ClosedCycle
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -225,6 +227,7 @@ EFFECTS
 			key = 1 1 1.055097 0
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -258,20 +261,38 @@ EFFECTS
 			key = 9 0.001
 		}
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 5
-			   // useGimbalResponseSpeed = true
-		   // gimbalResponseSpeed = 5
-			   	}
+		gimbalResponseSpeed = 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100 
+		gimbalLock = False
+	}
 
-MODULE
-{
-name = ModuleAnimateGeneric
-animationName = vtol2
-startEventGUIName = Vertical
-endEventGUIName = Horizontal
-}
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = vtol2
+		startEventGUIName = #RSS-vtol-on // Vertical
+		endEventGUIName = #RSS-vtol-off // Horizontal
+		actionGUIName = #RSS-vtol-togl // Toggle VTOL
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
 }
