--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/VTOL2L.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/VTOL2L.cfg
@@ -23,23 +23,24 @@ PART
 	cost = 7099
 	category = Propulsion
 	subcategory = 0
+
 	title = RSR VTOL 2-L
 	manufacturer = #RSS-Agency-titl
+	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm) MultiModeEngine: Air Breathing and Closed Cycle>
 
-	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm)
+	tags = new // #RSS-vtol-tags
 
+	mass = 0.45
 
-mass = 0.45
-dragModelType = default
-maximum_drag = 0.01
-minimum_drag = 0.01
-angularDrag = 1
-crashTolerance = 19
-maxTemp = 3900
+	dragModelType = default
+	maximum_drag = 0.01
+	minimum_drag = 0.01
+	angularDrag = 1
+	crashTolerance = 19
 
+	maxTemp = 3900
 
-
-EFFECTS
+	EFFECTS
 	{
 		running_closed
 		{
@@ -157,12 +158,14 @@ EFFECTS
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = MultiModeEngine
 		primaryEngineID = AirBreathing
 		secondaryEngineID = ClosedCycle
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -226,6 +229,7 @@ EFFECTS
 			key = 1 1 1.055097 0
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -260,21 +264,37 @@ EFFECTS
 		}
 	}
 
-
-MODULE
+	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 5
-			   // useGimbalResponseSpeed = true
-		   // gimbalResponseSpeed = 5
-			   	}
+		gimbalResponseSpeed = 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100 
+		gimbalLock = False
+	}
 
-MODULE
-{
-name = ModuleAnimateGeneric
-animationName = vtol2
-startEventGUIName = Vertical
-endEventGUIName = Horizontal
-}
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = vtol2
+		startEventGUIName = #RSS-vtol-on // Vertical
+		endEventGUIName = #RSS-vtol-off // Horizontal
+		actionGUIName = #RSS-vtol-togl // Toggle VTOL
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
 }
