--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -5,7 +5,7 @@
 
 // THIS FILE: CC BY-SA 4.0 by [zer0Kerbal][https://github.com/zer0Kerbal]
 
-@PART[rsr-eng-250-ogard,rsr-eng-250-mariveex,rsr-eng-jet-125-basic,rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+@PART[rsr-eng-vtol-l,rsr-eng-vtol-r,rsr-eng-250-ogard,rsr-eng-250-mariveex,rsr-eng-jet-125-basic,rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
@@ -86,18 +86,9 @@
 }
 
 // \engineS3.cfg:
-// \rsr-eng-250-longsword.cfg:
-// \rsr-eng-ion-iguana.cfg:
-// \rsr-eng-nuc-250-aa.cfg:
 // BigRadialEngineLandingLegs.cfg:
 // \liquidEngineRadial\liquidEngineRadial.cfg:
 //   		gimbalTransformName = obj_gimbal
 
-// \RSR_VTOL_EnginesB\VTOL2L.cfg:
-// \RSR_VTOL_EnginesB\VTOL2R.cfg:
 
-// \RustyLiquidEngine.cfg:
-//   137  		gimbalTransformName = GIMBAL
-
-// \RustyLiquidEngineLarge.cfg:
 // \RSR_S2_V.cfg:
