--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/mariveex/rsr-eng-250-mariveex }	mesh = model.mu
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/mariveex/rsr-eng-250-mariveex }
 	scale = 1.0
 	rescaleFactor = 1.1
 	bulkheadProfiles = size2
