--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-ion-0625.cfg v1.8.99.4
+// rsr-eng-ion-0625-gecko.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-ion-0625
+	name = rsr-eng-ion-0625-gecko
 	oldName = EngineGecko
 	module = Part
 	author = GagaX and zer0Kerbal
