--- a/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
@@ -1,18 +1,47 @@
-// RustyStarRockets v1.0.0.0
+// RustyStarRockets v1.0.1.0
 // Rusty Star Rockets (RSR)
 // created: 04 Oct 2022
-// updated: 17 Mar 2023
+// updated: 08 Jul 2023
 //
-// TEMPLATE: ModTags.md v1.1.0.0
+// TEMPLATE: ModTags.md v1.1.1.0
 // created: 04 Oct 2022
-// updated: 17 Feb 2023
+// updated: 16 Apr 2023
 
-// THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
 // updates parts with MOD-NAME localization strings
 @PART[rsr-*]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
 {
+	&tags = missing // catch any parts missing tags
 	tmp0 = #RSR-tags
 	@tags = #$tags$ $tmp0$
 	!tmp0 = DELETE
 }
+
+@PART[rsr-eng-nuc-leg-250]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-eng-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-250-mariveex]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-mrvx-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+		#RSR-aant = )atomic )ant
+		#RSR-bubu = )bubu
+		#RSR-bura = )bura
+		#RSR-falc = )falchion
+		#RSR-geck = )gecko
+		#RSR-gdrx = )goodrax
+		#RSR-iguana = )iguana
+		#RSR-lsword = )longsword
+		#RSR-mstrl = )maestral
+		#RSR-gard = )ogard
+		#RSR-shjz = )shejoz
+		#RSR-ttnplk = )tutnplok
+		#RSR-vozm = )voozmee
