--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -23,20 +23,20 @@ Localization
 		#RSR-tags = rsr rust star
 
 	// Addon specific tags
-		#RSR-gecko = )gecko
-		#RSR-iguana = )iguana
-		#RSR-atomicant = )atomic )ant
-		#RSR-maestral = )maestral
-		#RSR-falchion = )falchion
-		#RSR-longsword = )longsword
-		#RSR-bura = )bura
-		#RSR-tutnplok = )tutnplok
-		#RSR-mariveex = )mariveex
-		#RSR-voozmee = )voozmee
-		#RSR-goodrax = )goodrax
-		#RSR-ogard = )ogard
+		#RSR-aant = )atomic )ant
 		#RSR-bubu = )bubu
-		#RSR-shejoz = )shejoz
+		#RSR-bura = )bura
+		#RSR-falc = )falchion
+		#RSR-geck = )gecko
+		#RSR-gdrx = )goodrax
+		#RSR-iguana = )iguana
+		#RSR-lsword = )longsword
+		#RSR-mstrl = )maestral
+		#RSR-mrvx = )mariveex
+		#RSR-gard = )ogard
+		#RSR-shjz = )shejoz
+		#RSR-ttnplk = )tutnplok
+		#RSR-vozm = )voozmee
 
 // 0.8.99.3
 	// Parts\Aero
