--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 1.20427, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -1.17511, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 1.20427, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -1.17511, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = heavierRocketry
 	entryCost = 38000
@@ -26,10 +27,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Engine "Mariveex"
+	title = RSR 2.5m Engine "Mariveex"
 	manufacturer = #RSS-Agency-titl
 	description = Big rocket engine.
-	tags = new // #RSS-eng-tags
+	tags = #RSS-eng-tags
 
 	mass = 6
 	dragModelType = default
@@ -369,4 +370,17 @@ PART
 		}
 	}
 
+	// Dimensions: x: 3.11, y: 2.62, z: 3.11
+	// Bounding Box Size: 25299.46 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 25299
+	}
+
+	DRAG_CUBE
+	{
+		cube = Fairing, 6.567,0.7363,2.204, 6.567,0.7363,2.204, 5.087,0.9845,1.007, 5.087,0.5768,2.468, 6.02,0.7352,2.204, 6.02,0.7349,2.204, 0,0.01356,0, 3.106,2.622,3.106
+		cube = Clean, 5.908,0.7253,2.243, 5.908,0.7254,2.243, 5.087,0.9845,1.007, 5.087,0.6529,2.468, 5.092,0.727,2.243, 5.092,0.7256,2.243, 0,0.01356,0, 3.106,2.622,3.106
+	}
 }
